@@ -30,8 +30,8 @@
 #include "libfdatetime_nsf_timedate.h"
 #include "libfdatetime_types.h"
 
-/* Initialize a NSF timedate
- * Make sure the value nsf_timedate is pointing to is set to NULL
+/* Creates a NSF timedate
+ * Make sure the value nsf_timedate is referencing, is set to NULL
  * Returns 1 if successful or -1 on error
  */
 int libfdatetime_nsf_timedate_initialize(
@@ -421,6 +421,7 @@ int libfdatetime_nsf_timedate_get_string_size(
 	libfdatetime_date_time_values_t date_time_values;
 
 	static char *function = "libfdatetime_nsf_timedate_get_string_size";
+	int result            = 0;
 
 	if( nsf_timedate == NULL )
 	{
@@ -458,13 +459,13 @@ int libfdatetime_nsf_timedate_get_string_size(
 
 		return( -1 );
 	}
-	/* Create the date and time string
-	 */
-	if( libfdatetime_date_time_values_get_string_size(
-	     &date_time_values,
-	     string_size,
-	     string_format_flags,
-	     error ) != 1 )
+	result = libfdatetime_date_time_values_get_string_size(
+	          &date_time_values,
+	          string_size,
+	          string_format_flags,
+	          error );
+
+	if( result == -1 )
 	{
 		libcerror_error_set(
 		 error,
@@ -475,11 +476,10 @@ int libfdatetime_nsf_timedate_get_string_size(
 
 		return( -1 );
 	}
-	/* Make sure the string can hold the hexadecimal representation
-	 * of a NSF timedate
-	 */
-	if( *string_size < 24 )
+	else if( result == 0 )
 	{
+		/* Make sure the string can hold the hexadecimal representation of the NSF timedate
+		 */
 		*string_size = 24;
 	}
 	return( 1 );
