@@ -30,8 +30,8 @@
 #include "libfdatetime_posix_time.h"
 #include "libfdatetime_types.h"
 
-/* Initialize a POSIX time
- * Make sure the value posix_time is pointing to is set to NULL
+/* Creates a POSIX time
+ * Make sure the value posix_time is referencing, is set to NULL
  * Returns 1 if successful or -1 on error
  */
 int libfdatetime_posix_time_initialize(
@@ -725,6 +725,7 @@ int libfdatetime_posix_time_get_string_size(
 	libfdatetime_date_time_values_t date_time_values;
 
 	static char *function = "libfdatetime_posix_time_get_string_size";
+	int result            = 0;
 
 	if( posix_time == NULL )
 	{
@@ -762,13 +763,13 @@ int libfdatetime_posix_time_get_string_size(
 
 		return( -1 );
 	}
-	/* Create the date and time string
-	 */
-	if( libfdatetime_date_time_values_get_string_size(
-	     &date_time_values,
-	     string_size,
-	     string_format_flags,
-	     error ) != 1 )
+	result = libfdatetime_date_time_values_get_string_size(
+	          &date_time_values,
+	          string_size,
+	          string_format_flags,
+	          error );
+
+	if( result == -1 )
 	{
 		libcerror_error_set(
 		 error,
@@ -779,11 +780,10 @@ int libfdatetime_posix_time_get_string_size(
 
 		return( -1 );
 	}
-	/* Make sure the string can hold the hexadecimal representation
-	 * of a POSIX time
-	 */
-	if( *string_size < 13 )
+	else if( result == 0 )
 	{
+		/* Make sure the string can hold the hexadecimal representation of the POSIX time
+		 */
 		*string_size = 13;
 	}
 	return( 1 );
